# NukeCSharp

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
managed/NukeEngine.Managed/: Bridge.cs  NukeEngine.Managed.csproj  Primitives.cs
src/: NukeCSharp.cpp  NukeCSharp.gen.inc
